Pass Index in Object Info node does not refresh in Node Tree on change for Object Index #54089

Closed
opened 2018-02-16 23:56:58 +01:00 by Rumen Belev · 9 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.79= 5bd8ac9, see splash screen)
Worked: (optional)

Pass Index in Object Info node does not refresh in Node Tree on change for Object Index

Exact steps for others to reproduce the error
See the blend file

Pass Index in Object Info node does not refresh in Node Tree on change for Object Index.blend

for reference:

  1. In simple material node setup I connected Pass Index to Color material Input
  2. Initially the Material Index is connected. Try changing Pass Index option in Material Tab of Properties window from 0 to 10 - the color of the material changes from black to white.
  3. Connect now the Object Index (through the Divide node) and change the Pass index in Object Tab of Properties window from 0 to 10 - nothing changes.
    You can update the change by selecting different frame or continuously by playing animation.

I expect both changes of Pass Indexes to behave the same way - preferably as in the case of Material Pass Index.

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.79= 5bd8ac9, see splash screen) Worked: (optional) **Pass Index in Object Info node does not refresh in Node Tree on change for Object Index** **Exact steps for others to reproduce the error** See the blend file [Pass Index in Object Info node does not refresh in Node Tree on change for Object Index.blend](https://archive.blender.org/developer/F2307113/Pass_Index_in_Object_Info_node_does_not_refresh_in_Node_Tree_on_change_for_Object_Index.blend) for reference: 1. In simple material node setup I connected Pass Index to Color material Input 2. Initially the Material Index is connected. Try changing Pass Index option in Material Tab of Properties window from 0 to 10 - the color of the material changes from black to white. 3. Connect now the Object Index (through the Divide node) and change the Pass index in Object Tab of Properties window from 0 to 10 - nothing changes. You can update the change by selecting different frame or continuously by playing animation. I expect both changes of Pass Indexes to behave the same way - preferably as in the case of Material Pass Index.
Author

Added subscriber: @syziph

Added subscriber: @syziph

Added subscriber: @zeauro

Added subscriber: @zeauro

Confirmed on ubuntu 16.04 64bits NVIDIA Titan Black with master 5bc2c17 and 2.79aRC.

Confirmed on ubuntu 16.04 64bits NVIDIA Titan Black with master 5bc2c17 and 2.79aRC.

Added subscriber: @brecht

Added subscriber: @brecht

Are we talking about the previews in the node editor? Those are not expected to update when changing the object index, they are only previewing the material in isolation, the object(s) in the scene have no influence.

Are we talking about the previews in the node editor? Those are not expected to update when changing the object index, they are only previewing the material in isolation, the object(s) in the scene have no influence.

You can update the change by selecting different frame or continuously by playing animation.

The update is visible in 3DView with material display. But it needs to be forced by a frame change.
The fact that cannot work with node previews is a point in favor to fix refreshing in 3DView.

> You can update the change by selecting different frame or continuously by playing animation. The update is visible in 3DView with material display. But it needs to be forced by a frame change. The fact that cannot work with node previews is a point in favor to fix refreshing in 3DView.

Ok, so this is about GLSL material display.

Ok, so this is about GLSL material display.

This issue was referenced by 1beb6b43c1

This issue was referenced by 1beb6b43c162f657607b49df9d583b38a160d683

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54089
No description provided.