Fix T54089: missing GLSL material draw update when changing object pass index.